apps/cms/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cms-service
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  tls:
    - hosts:
        - cms-kube.ynoacamino.me
      secretName: cms-tls

  rules:
    - host: cms-kube.ynoacamino.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cms
                port:
                  number: 80
